--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -63,6 +63,11 @@
 			<version>4.5.13</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.26</version>
