--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "element-plus": "^2.2.9",
     "vue": "^3.2.37",
+    "vue-browser-detect-plugin": "^0.1.18",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
